2004-07-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtp.man:     Added mention of DIGEST-MD5 support and put some
	                RFC references in.

2004-07-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtp.tcl:     Cleaned up some hardcoded settings left from
	                development. (oops).

2004-07-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtp.tcl:     Added SASL mechanism DIGEST-MD5 authentication
	support. Also redid md5 package version abstraction.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* smtp.tcl:     Updated smtp to version 1.4, to reflect the
	* smtp.man:     extensions made to it (Authentication). This
	* pkgIndex.tcl: also distinguishes the main line version from the
	                one in the 1.6 branch.

2004-05-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* smtp.tcl: Fixed [SF Tcllib Bug 954328]. Same bug in different
	  guise. This package exclusively required md5 v2. This clashed
	  with mime's requirement of v1. Now package smtp also adapts at
	  runtime to whatever version of package md5 has been loaded.

	* mime.test:
	* mime.tcl: Fixed [SF Tcllib Bug 954328]. The package mime now
	  adapts at runtime to whatever version of package md5 has been
	  loaded.

2004-05-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* smtp.tcl (::smtp::wdata): Fixed [SF Tcllib Bug 951568]. Added
	  handlers for the query/* commands from Trf. Also changed the
	  default to sliently pass all unknowns in the future.

2004-05-10  Andreas Kupries  <andreask@activestate.com>

	* mime.tcl (copymessageaux): Applied the patch for [SF Tcllib Bug
	  893516] on behalf of Marshall Rose. The problem was found by
	  Todd Copeland <todd.copeland@pervasive.com>, he provided the
	  patch as well.

2004-05-04  Andreas Kupries  <andreask@activestate.com>

	* mime.man:
	* mime.test:
	* mime.tcl: Applied [SF Tcllib Patch 763712]. This extends the